--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 retina-face==0.0.13
 rsa==4.9
+scipy==1.11.2
 six==1.16.0
 soupsieve==2.4.1
 tensorboard==2.13.0
